--- a/source/timewarp-terminal/timewarp-terminal.csproj
+++ b/source/timewarp-terminal/timewarp-terminal.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="readme.md" Pack="true" PackagePath="" />
+    <None Include="../../README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
