Add dev-cli tool for CI/CD orchestration and development workflow
Create a development CLI following timewarp-nuru patterns:
- TimeWarp.Nuru framework with attributed routes
- Mediator pattern for command handling
- AOT compilation support

Commands: build, clean, test, verify-samples, check-version, ci

Also fixes msbuild/repository.props to reference timewarp-terminal instead of timewarp-nuru.

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -28,6 +28,7 @@
     <PackageVersion Include="TimeWarp.Jaribu" Version="1.0.0-beta.7" />
     <PackageVersion Include="TimeWarp.Build.Tasks" Version="1.0.0" />
     <PackageVersion Include="TimeWarp.OptionsValidation" Version="1.0.0-beta.4" />
+    <PackageVersion Include="TimeWarp.Nuru" Version="3.0.0-beta.22" />
     <PackageVersion Include="TimeWarp.Nuru.Parsing" Version="$(Version)" />
     <PackageVersion Include="TimeWarp.Nuru.Analyzers" Version="$(Version)" />
   </ItemGroup>
