--- a/source/timewarp-terminal/timewarp-terminal.csproj
+++ b/source/timewarp-terminal/timewarp-terminal.csproj
@@ -2,11 +2,14 @@
 
   <PropertyGroup>
     <!-- Independent versioning - not tied to Nuru version -->
-    <Version>1.0.0-beta.2</Version>
+    <Version>1.0.0-beta.3</Version>
     <AssemblyName>TimeWarp.Terminal</AssemblyName>
     <RootNamespace>TimeWarp.Terminal</RootNamespace>
     <Description>Terminal abstractions and widgets for console applications - IConsole, ITerminal, panels, tables, rules, and ANSI color support</Description>
     <PackageTags>terminal;console;ansi;colors;widgets;panel;table;cli;timewarp</PackageTags>
+
+    <!-- Package settings -->
+    <IsPackable>true</IsPackable>
 
     <!-- AOT Compatibility -->
     <IsAotCompatible>true</IsAotCompatible>
